...
//                                       context
//                                           .read<OnboardingImportPKBloc>()
//                                           .add(
//                                               ImportWallet(password: password));
//                                     },
//                                     backButtonText: 'CANCEL',
//                                     continueButtonText: 'LOGIN',
//                                     optionalErrorWidget: state.importState
//                                             is ImportStateError
//                                         ? Align(
//                                             alignment: Alignment.center,
//                                             child: Container(
//                                               padding:
...
